[package]
name = "pcron"
authors = ["Joaquín Rossi"]
version = "0.1.0"
edition = "2024"
categories = ["command-line-utilities"]
keywords = ["unix"]

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.43"
clap = { version = "4.5.54", features = ["derive", "env"] }
futures = "0.3.31"
hostname = "0.4.2"
nom = "8.0.0"
rand = "0.9.2"
rand_distr = "0.5.1"
tokio = { version = "1.49.0", features = ["full"] }
whoami = "2.1.0"
